// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the SearchBar component with headingText matches the snapshot 1`] = `
<div
  className="sc-htpNat ednHKJ"
  role="search"
>
  <h2
    className="sc-bxivhb cptdIu"
  >
    Search the Yoast knowledge base
  </h2>
  <form
    onSubmit={[Function]}
  >
    <label
      className="sc-ifAKCX LtJIk"
      htmlFor="kb-search-input"
    >
      <svg
        aria-hidden="true"
        className="sc-bZQynM fNWYPv"
        focusable="false"
        role="img"
      />
      <span
        className="screen-reader-text"
      >
        Search the Yoast knowledge base
      </span>
    </label>
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      className="sc-EHOje aywLs"
      defaultValue=""
      id="kb-search-input"
      name="search-input"
      onChange={[Function]}
      placeholder="Search the knowledge base"
      spellCheck="false"
      type="text"
    />
    <button
      className="sc-bwzfXH eeZBlJ sc-bdVaJa bsIiYo"
      onClick={undefined}
      type="button"
    >
      <span>
        Search
      </span>
    </button>
  </form>
</div>
`;

exports[`the SearchBar component without headingText matches the snapshot 1`] = `
<div
  className="sc-htpNat ednHKJ"
  role="search"
>
  <h2
    className="sc-bxivhb cptdIu"
  >
    Search the Yoast knowledge base
  </h2>
  <form
    onSubmit={[Function]}
  >
    <label
      className="sc-ifAKCX LtJIk"
      htmlFor="kb-search-input"
    >
      <svg
        aria-hidden="true"
        className="sc-gzVnrw kpyDKH"
        focusable="false"
        role="img"
      />
      <span
        className="screen-reader-text"
      >
        Search the Yoast knowledge base
      </span>
    </label>
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      className="sc-EHOje aywLs"
      defaultValue=""
      id="kb-search-input"
      name="search-input"
      onChange={[Function]}
      placeholder="Search the knowledge base"
      spellCheck="false"
      type="text"
    />
    <button
      className="sc-bwzfXH eeZBlJ sc-bdVaJa bsIiYo"
      onClick={undefined}
      type="button"
    >
      <span>
        Search
      </span>
    </button>
  </form>
</div>
`;
